added sound effect

--- a/rekenrace-roan/rekenrace-roan/rekenrace-roan.csproj
+++ b/rekenrace-roan/rekenrace-roan/rekenrace-roan.csproj
@@ -9,4 +9,20 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="Sounds\incorrect-2.mp3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Sounds\correct.mp3">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Sounds\incorrect-2.mp3">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Sounds\incorrect.mp3">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
