--- a/rekenrace-roan/rekenrace-roan/rekenrace-roan.csproj
+++ b/rekenrace-roan/rekenrace-roan/rekenrace-roan.csproj
@@ -11,13 +11,18 @@
 
   <ItemGroup>
     <None Remove="Sounds\incorrect-2.mp3" />
+    <None Remove="Sounds\incorrect-buzzer.mp3" />
+    <None Remove="Sounds\incorrect-loud.mp3" />
   </ItemGroup>
 
   <ItemGroup>
     <Content Include="Sounds\correct.mp3">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Sounds\incorrect-2.mp3">
+    <Content Include="Sounds\incorrect-buzzer.mp3">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Sounds\incorrect-loud.mp3">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Sounds\incorrect.mp3">
